--- a/bank-project/secret.yaml
+++ b/bank-project/secret.yaml
@@ -4,5 +4,6 @@ metadata:
   name: bank-secret
 type: Opaque
 data:
-  DB_USERNAME: cm9vdA==
-  DB_PASSWORD: c3VwcG9ydEAxMjNBQkM=
+  DB_USERNAME: AWS \
+  DB_PASSWORD: $(aws ecr get-login-password --region us-east-1) \
+  -n default
