--- a/bank-project/backendapi.yaml
+++ b/bank-project/backendapi.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: bank-backend-container
-        image: 454592823186.dkr.ecr.us-east-1.amazonaws.com/bank-backendapi:28
+        image: bank-backendapi:28
         ports:
         - containerPort: 8080
         env:
